--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "homepage": "https://hexedhorizon.github.io/ion-t-evangelio/",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint"
   },
   "dependencies": {
     "@capacitor/app": "5.0.7",
